--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -1,6 +1,295 @@
 {
- "cells": [],
- "metadata": {},
+ "cells": [
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "70b9969c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "83fb7cf9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>communityName</th>\n",
+       "      <th>state</th>\n",
+       "      <th>countyCode</th>\n",
+       "      <th>communityCode</th>\n",
+       "      <th>population</th>\n",
+       "      <th>householdsize</th>\n",
+       "      <th>racepctblack</th>\n",
+       "      <th>racePctWhite</th>\n",
+       "      <th>racePctAsian</th>\n",
+       "      <th>racePctHisp</th>\n",
+       "      <th>...</th>\n",
+       "      <th>burglaries</th>\n",
+       "      <th>burglPerPop</th>\n",
+       "      <th>larcenies</th>\n",
+       "      <th>larcPerPop</th>\n",
+       "      <th>autoTheft</th>\n",
+       "      <th>autoTheftPerPop</th>\n",
+       "      <th>arsons</th>\n",
+       "      <th>arsonsPerPop</th>\n",
+       "      <th>ViolentCrimesPerPop</th>\n",
+       "      <th>nonViolPerPop</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>BerkeleyHeightstownship</td>\n",
+       "      <td>NJ</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>5320.0</td>\n",
+       "      <td>11980</td>\n",
+       "      <td>3.10</td>\n",
+       "      <td>1.37</td>\n",
+       "      <td>91.78</td>\n",
+       "      <td>6.50</td>\n",
+       "      <td>1.88</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14.0</td>\n",
+       "      <td>114.85</td>\n",
+       "      <td>138.0</td>\n",
+       "      <td>1132.08</td>\n",
+       "      <td>16.0</td>\n",
+       "      <td>131.26</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>16.41</td>\n",
+       "      <td>41.02</td>\n",
+       "      <td>1394.59</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Marpletownship</td>\n",
+       "      <td>PA</td>\n",
+       "      <td>45.0</td>\n",
+       "      <td>47616.0</td>\n",
+       "      <td>23123</td>\n",
+       "      <td>2.82</td>\n",
+       "      <td>0.80</td>\n",
+       "      <td>95.57</td>\n",
+       "      <td>3.44</td>\n",
+       "      <td>0.85</td>\n",
+       "      <td>...</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>242.37</td>\n",
+       "      <td>376.0</td>\n",
+       "      <td>1598.78</td>\n",
+       "      <td>26.0</td>\n",
+       "      <td>110.55</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>4.25</td>\n",
+       "      <td>127.56</td>\n",
+       "      <td>1955.95</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Tigardcity</td>\n",
+       "      <td>OR</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>29344</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>0.74</td>\n",
+       "      <td>94.33</td>\n",
+       "      <td>3.43</td>\n",
+       "      <td>2.35</td>\n",
+       "      <td>...</td>\n",
+       "      <td>274.0</td>\n",
+       "      <td>758.14</td>\n",
+       "      <td>1797.0</td>\n",
+       "      <td>4972.19</td>\n",
+       "      <td>136.0</td>\n",
+       "      <td>376.30</td>\n",
+       "      <td>22.0</td>\n",
+       "      <td>60.87</td>\n",
+       "      <td>218.59</td>\n",
+       "      <td>6167.51</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Gloversvillecity</td>\n",
+       "      <td>NY</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>29443.0</td>\n",
+       "      <td>16656</td>\n",
+       "      <td>2.40</td>\n",
+       "      <td>1.70</td>\n",
+       "      <td>97.35</td>\n",
+       "      <td>0.50</td>\n",
+       "      <td>0.70</td>\n",
+       "      <td>...</td>\n",
+       "      <td>225.0</td>\n",
+       "      <td>1301.78</td>\n",
+       "      <td>716.0</td>\n",
+       "      <td>4142.56</td>\n",
+       "      <td>47.0</td>\n",
+       "      <td>271.93</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>306.64</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Bemidjicity</td>\n",
+       "      <td>MN</td>\n",
+       "      <td>7.0</td>\n",
+       "      <td>5068.0</td>\n",
+       "      <td>11245</td>\n",
+       "      <td>2.76</td>\n",
+       "      <td>0.53</td>\n",
+       "      <td>89.16</td>\n",
+       "      <td>1.17</td>\n",
+       "      <td>0.52</td>\n",
+       "      <td>...</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>728.93</td>\n",
+       "      <td>1060.0</td>\n",
+       "      <td>8490.87</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>728.93</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>40.05</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>9988.79</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 146 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             communityName state  countyCode  communityCode  population  \\\n",
+       "0  BerkeleyHeightstownship    NJ        39.0         5320.0       11980   \n",
+       "1           Marpletownship    PA        45.0        47616.0       23123   \n",
+       "2               Tigardcity    OR         NaN            NaN       29344   \n",
+       "3         Gloversvillecity    NY        35.0        29443.0       16656   \n",
+       "4              Bemidjicity    MN         7.0         5068.0       11245   \n",
+       "\n",
+       "   householdsize  racepctblack  racePctWhite  racePctAsian  racePctHisp  ...  \\\n",
+       "0           3.10          1.37         91.78          6.50         1.88  ...   \n",
+       "1           2.82          0.80         95.57          3.44         0.85  ...   \n",
+       "2           2.43          0.74         94.33          3.43         2.35  ...   \n",
+       "3           2.40          1.70         97.35          0.50         0.70  ...   \n",
+       "4           2.76          0.53         89.16          1.17         0.52  ...   \n",
+       "\n",
+       "   burglaries  burglPerPop  larcenies  larcPerPop  autoTheft  autoTheftPerPop  \\\n",
+       "0        14.0       114.85      138.0     1132.08       16.0           131.26   \n",
+       "1        57.0       242.37      376.0     1598.78       26.0           110.55   \n",
+       "2       274.0       758.14     1797.0     4972.19      136.0           376.30   \n",
+       "3       225.0      1301.78      716.0     4142.56       47.0           271.93   \n",
+       "4        91.0       728.93     1060.0     8490.87       91.0           728.93   \n",
+       "\n",
+       "   arsons  arsonsPerPop  ViolentCrimesPerPop  nonViolPerPop  \n",
+       "0     2.0         16.41                41.02        1394.59  \n",
+       "1     1.0          4.25               127.56        1955.95  \n",
+       "2    22.0         60.87               218.59        6167.51  \n",
+       "3     NaN           NaN               306.64            NaN  \n",
+       "4     5.0         40.05                  NaN        9988.79  \n",
+       "\n",
+       "[5 rows x 146 columns]"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df = pd.read_csv('crimedata.csv')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "9bca07df",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "communityName             0\n",
+      "state                     0\n",
+      "countyCode             1221\n",
+      "communityCode          1224\n",
+      "population                0\n",
+      "                       ... \n",
+      "autoTheftPerPop           3\n",
+      "arsons                   91\n",
+      "arsonsPerPop             91\n",
+      "ViolentCrimesPerPop     221\n",
+      "nonViolPerPop            97\n",
+      "Length: 146, dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df.isnull().sum())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7ab1dc9a",
+   "metadata": {},
+   "source": [
+    "We need to handle the data, as some columns are missing values. For countyCode and communityCode we will replace these values with zero. For the other columns we will work with, we will replace their missing value by the rounded median of these values. "
+   ]
+  }
+ ],
+ "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3 (ipykernel)",
+   "language": "python",
+   "name": "python3"
+  },
+  "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.10.4"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "8ed920e2ddf8d9b834073b6ca6a960a53533c6a95cf0bbb4a61c5730c9249576"
+   }
+  }
+ },
  "nbformat": 4,
  "nbformat_minor": 5
 }
